use more idomatic format